--- a/css/style.css
+++ b/css/style.css
@@ -79,14 +79,16 @@ header {
     z-index: 100;
 }
 
-header h1,
-header p,
+header h1 {
+    max-width: 800px;
+    margin: 0 auto 0.5rem auto;
+    padding: 0 1.5rem;
+}
+
 header .subtitle {
     max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    margin: 0 auto;
+    padding: 0 1.5rem;
 }
 
 nav {
