--- a/css/style.css
+++ b/css/style.css
@@ -79,14 +79,13 @@ header {
     z-index: 100;
 }
 
-header h1,
-header .subtitle {
+/* Добавить эти строки: */
+header > * {
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
-    text-align: center; 
 }
 
 nav {
